# prfmodel

./: .buildinfo  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  LICENSE  NOTICE  README.md  genindex.html  getting_started.html  index.html  installation.html  introduction.html  objects.inv  project_setup.md  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/actions/setup-python-cached/: action.yml
.github/workflows/: build.yml  documentation.yml  validate-packages.yml
_images/: inheritance-2de769682007910ad1446ea3f36c1efa2631d6e6.png.map  inheritance-4cd6b348323027e813b88ad664f8649f184b4de9.png.map  inheritance-600bccb39e61ca31c866ed7689e76bba1698eca5.png.map  inheritance-83b434b396a4c1b0d54519866f1a59b6a8a98834.png.map  inheritance-90e2316dc92ecdc480032e80cd3fb2ec5a779697.png.map  inheritance-9719c080735884ad87eadd7b6818d438002dcf93.png.map
_modules/: index.html
_modules/prfmodel/: adapter.html  examples.html  stimulus.html  utils.html
_modules/prfmodel/fitters/: grid.html  linear.html  sgd.html
_modules/prfmodel/models/: base.html  composite.html  compressive_spatial_summation.html  difference_of_gaussians.html  encoding.html  gaussian.html  temporal.html
_modules/prfmodel/stimuli/: base.html  cf.html  prf.html
_sources/: getting_started.md.txt  index.rst.txt  installation.md.txt  introduction.md.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/prfmodel/: PRFStimulus.rst.txt  index.rst.txt
_sources/development/: index.rst.txt
_sources/tutorials/: diff_gaussians_prf_simulated.md.txt  index.rst.txt
_sources/tutorials/examples/: cf_fmri_visual.md.txt  index.rst.txt
_sources/tutorials/tutorials/: diff_gaussians_prf_simulated.md.txt  div_norm_prf_simulated.md.txt  index.rst.txt  regressors.md.txt
autoapi/: index.html
autoapi/prfmodel/: PRFStimulus.html  convert_parameters_to_tensor.html  index.html
autoapi/prfmodel/adapter/: Adapter.html  ParameterConstraint.html  ParameterTransform.html  index.html
autoapi/prfmodel/backend/: index.html
autoapi/prfmodel/density/: gamma_density.html  (+3 more)
branches/add-cf-example/: .buildinfo  genindex.html  getting_started.html  index.html  installation.html  introduction.html  objects.inv  py-modindex.html  search.html  searchindex.js
branches/add-empirical-example/: .buildinfo  genindex.html  getting_started.html  index.html  installation.html  introduction.html  objects.inv  py-modindex.html  search.html  searchindex.js
branches/docs-branch-deploy/: py-modindex.html  searchindex.js
branches/refactor-docs/: .buildinfo  genindex.html  getting_started.html  index.html  installation.html  introduction.html  objects.inv  py-modindex.html  search.html  searchindex.js
development/: architecture.html  index.html
docs/: Makefile  conf.py  getting_started.md  index.rst  installation.md  make.bat
docs/_static/: custom.css
docs/_templates/: index.rst
docs/development/: architecture.md
docs/tutorials/: csf_simulated.md  css_prf_simulated.md  diff_gaussians_prf_simulated.md  index.rst  prf_2d_fmri_visual.md  simple_prf_empirical_fmri.md  simple_prf_simulated.md
src/prfmodel/: __init__.py  _docstring.py  adapter.py  examples.py  exceptions.py  typing.py  utils.py
tests/: conftest.py  test_adapter.py  test_examples.py  test_utils.py
tests/fitters/: conftest.py  test_grid.py  test_least_squares.py  test_linear.py  test_sgd.py
tests/impulse/: conftest.py  test_convolve.py  test_density.py  test_shifted_gamma.py  test_two_gamma.py  test_two_gamma_deriv.py
tests/models/: conftest.py  test_base.py  test_compressive_spatial_summation.py  test_csf.py  test_css.py  test_difference_of_gaussians.py  test_divisive_normalization.py  test_dog.py  test_encoding.py  test_gaussian.py  test_scaling.py  test_temporal.py
tests/plotting/: test_stimuli.py
tests/regressors/: test_additive.py  test_convolved.py  test_fitter_integration.py  test_integration.py  test_list.py
tests/scaling/: test_amplitude.py  test_base.py  test_baseline.py
tests/stimuli/: test_csf_stimulus.py
tests/stimulus/: test_cf_stimulus.py  test_csf_stimulus.py  test_prf_stimulus.py
tutorials/: css_prf_simulated.html  diff_gaussians_prf_simulated.html  index.html  simple_prf_empirical_fmri.html  simple_prf_simulated.html
tutorials/examples/: cf_fmri_visual.html  index.html  prf_2d_fmri_visual.html
tutorials/tutorials/: css_prf_simulated.html  diff_gaussians_prf_simulated.html  div_norm_prf_simulated.html  index.html  regressors.html
validation/: compare_braincoder.py  compare_prfpy.py  shared.py
(+942 files in other folders)
